--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3"
 services: 
   workout-tracker:
-    container_name: workout-tracker
-    image: pprathi2018/workout-tracker
-    restart: always
+    container_name: workouttrackeralpp
     build: .
+    command: node server.js
+    restart: always
+    environment: 
+      - DEBUG=True
     depends_on:  
       - mongo
     ports:
